test/zinc_source/compile_errors/concurrency/07_close_non_channel.zn
// expected-error: close\(\) expects a channel argument

fn main() {
    value = 1
    close(value)
}
